# orcid_downloader

./: .bumpversion.cfg  .cruft.json  .readthedocs.yml.rej  MANIFEST.in  README.md  example.xml  pubmed_example.xml  pyproject.toml  pyproject.toml.rej  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
notebooks/: Ground Authors.ipynb  Parsing Affiliations from PubMed.ipynb  Uncomma Workflow.ipynb
src/orcid_downloader/: __init__.py  __main__.py  api.py  cli.py  lexical.py  name_utils.py  owl.py  pubmed.py  ror.py  sqldb.py  standardize.py  version.py  wikidata.py
tests/: __init__.py  test_api.py  test_parse.py  test_version.py
